--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Git 연습</title>
 </head>
 <body>
-  
+  <div class="container">hello</div>
+  <ul>
+    <li>1.</li>
+  </ul>
 </body>
 </html>
